# license-checkr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json  settings.local.json
.claude/commands/: code-review.md  commit.md  release-review.md  release.md
.claude/rules/: code-style.md  development-workflow.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.license-checkr/: config.toml
docs/: index.html
src/: cli.rs  config.rs  detector.rs  main.rs  models.rs
src/analyzer/: dotnet.rs  java.rs  mod.rs  node.rs  python.rs  rust.rs
src/license/: classifier.rs  mod.rs  spdx.rs
src/registry/: crates_io.rs  maven.rs  mod.rs  npm.rs  pypi.rs
src/report/: mod.rs  pdf.rs  terminal.rs
