[package]
name = "license-checkr"
version = "0.1.0"
edition = "2021"
description = "Scan project dependencies and check license compliance"

[[bin]]
name = "license-checkr"
path = "src/main.rs"

[dependencies]
clap           = { version = "4", features = ["derive"] }
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
quick-xml      = { version = "0.36", features = ["serialize"] }
anyhow         = "1"
colored        = "2"
comfy-table    = "7"
indicatif      = "0.17"
printpdf       = { version = "0.7", features = ["embedded_images"] }
plotters       = { version = "0.3", features = ["bitmap_backend"] }
image          = "0.24"
futures        = "0.3"
regex          = "1"
dirs           = "5"

[dev-dependencies]
tempfile = "3"
