[package]
name = "license-checkr"
version = "0.1.7"
edition = "2021"
description = "Scan project dependencies and check license compliance"
license = "MIT"

[[bin]]
name = "license-checkr"
path = "src/main.rs"

[dependencies]
clap           = { version = "4", features = ["derive"] }
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
quick-xml      = { version = "0.36", features = ["serialize"] }
anyhow         = "1"
colored        = "2"
comfy-table    = "7"
indicatif      = "0.17"
printpdf       = "0.7"
futures        = "0.3"
regex          = "1"
dirs           = "5"

[dev-dependencies]
tempfile = "3"
